did some styling on the list for the nav and fixed the overall alignment of the header with justify-content: left. added styling import for app.css

--- a/client/src/CSS/CSS__Framework/CSS__Header/header.css
+++ b/client/src/CSS/CSS__Framework/CSS__Header/header.css
@@ -1,9 +1,9 @@
 .Header {
     /* border: 2px solid red; */
     height: 100%;
-    width: 17.5%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: left;
     align-items: center;
 
 }
